# window_pet

./: .gitignore  design.md  index.html  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/animation/: animations.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: animation_commands.rs  interaction_commands.rs  mod.rs  mood_commands.rs  pet_commands.rs  system_commands.rs
src-tauri/src/event_bus/: bus.rs  mod.rs
src-tauri/src/models/: config_model.rs  mod.rs  pet_model.rs
src-tauri/src/modules/: mod.rs
src-tauri/src/modules/activity/: commands.rs  detector.rs  mod.rs  rules.rs  scorer.rs  types.rs
src-tauri/src/modules/ai/: behavior.rs  decision.rs  mod.rs
src-tauri/src/modules/animation/: config.rs  manager.rs  mod.rs  provider.rs  sprite.rs  types.rs
src-tauri/src/modules/behavior/: ai_provider.rs  commands.rs  context.rs  manager.rs  mod.rs  provider.rs  rule_provider.rs  types.rs
src-tauri/src/modules/conversation/: generator.rs  mod.rs  parser.rs
src-tauri/src/modules/growth/: commands.rs  core.rs  mod.rs  storage.rs  types.rs
src-tauri/src/modules/interaction/: bubble.rs  dialogue.rs  manager.rs  mod.rs  types.rs
src-tauri/src/modules/monitor/: analysis.rs  mod.rs  system.rs
src-tauri/src/modules/mood/: effects.rs  manager.rs  mod.rs  modifiers.rs  types.rs
src-tauri/src/modules/pet/: attributes.rs  entity.rs  mod.rs
src-tauri/src/modules/reminder/: mod.rs  notifier.rs  scheduler.rs
src-tauri/src/modules/state_machine/: events.rs  mod.rs  states.rs  transitions.rs
src-tauri/src/modules/study/: commands.rs  dialogue.rs  manager.rs  mod.rs  timer.rs  (+1 more)
src-tauri/src/services/: event_service.rs  mod.rs  pet_service.rs
src-tauri/src/utils/: helpers.rs
(+52 files in other folders)
